--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "cookie-signature": "^1.2.2",
     "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "debug": "^4.4.0",
     "depd": "^2.0.0",
     "dotenv": "^16.5.0",
@@ -136,8 +137,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "description": ""
 }
